// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`update-and-publish-document should handle updating and publishing a non-existent document 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The content could not be found","status":404,"operationStatus":"NotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`update-and-publish-document should update and publish an invariant document with an empty culturesToPublish array 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
